# tauri-cpp

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  AGENTS.md  CHECKLIST.md  CMakeLists.txt  CMakePresets.json  Cargo.toml  README.md  package-lock.json  package.json
.github/workflows/: ci.yml  docs.yml
docs/: architecture.md  host_integration.md  integration_existing_project.md  performance.md  setup_unix.md  setup_windows.md
docs_site/: index.md  package.json
docs_site/.vitepress/: config.mts
docs_site/.vitepress/theme/: custom.css  index.ts
docs_site/api/: index.md
docs_site/experimental/: host-integration.md
docs_site/guide/: examples.md  existing-projects.md  host-integration.md  performance.md  quickstart.md  unix-setup.md
docs_site/reference/: architecture.md  performance.md
examples/plain_html/: build.mjs  package.json
examples/plain_html/src/: index.html  main.js  styles.css
examples/plain_html/src-tauri/: Cargo.toml  tauri.conf.json
examples/plain_html/src-tauri/capabilities/: default.json
examples/plain_html/src-tauri/src/: lib.rs  main.rs
examples/react_shadcn/: components.json  index.html  package.json  tailwind.config.js  vite.config.js
examples/react_shadcn/src/: App.jsx  index.css  main.jsx
examples/react_shadcn/src-tauri/: Cargo.toml  tauri.conf.json
examples/react_shadcn/src-tauri/src/: lib.rs  main.rs
examples/react_shadcn/src/components/ui/: button.jsx
examples/vite_tailwind/: index.html  package.json  tailwind.config.js  vite.config.js
examples/vite_tailwind/src/: main.js  style.css
examples/vite_tailwind/src-tauri/: Cargo.toml  tauri.conf.json
examples/vite_tailwind/src-tauri/src/: lib.rs  main.rs
include/tauri_cpp/: app_builder.hpp  command_context.hpp  event_bus.hpp  frontend_config.hpp  window_options.hpp
include/tauri_cpp/experimental/: host_extension.hpp
rust/host/: Cargo.toml  build.rs
rust/host/cpp/: demo_bridge.cpp
rust/host/include/tauri_cpp/: rust_bridge.hpp
rust/host/src/: bridge.rs  lib.rs
scripts/: bootstrap_unix.sh  bootstrap_windows.ps1  build_windows.ps1  configure_windows.ps1  dev_example.ps1  measure_windows.ps1  package_example.ps1  prepare_example.ps1  run_example.ps1  test_windows.ps1
src/: app_builder.cpp  event_bus.cpp
tests/: app_builder_tests.cpp
vs/: tauri_cpp.sln
vs/bootstrap/: bootstrap.vcxproj
vs/configure/: configure.vcxproj
vs/dev_plain_html/: dev_plain_html.vcxproj
vs/dev_react_shadcn/: dev_react_shadcn.vcxproj
vs/dev_vite_tailwind/: dev_vite_tailwind.vcxproj
vs/measure/: measure.vcxproj
vs/package_plain_html/: package_plain_html.vcxproj
vs/package_react_shadcn/: package_react_shadcn.vcxproj
vs/package_vite_tailwind/: package_vite_tailwind.vcxproj
vs/test/: test.vcxproj
