[workspace]
resolver = "2"
members = [
  "rust/host",
  "examples/plain_html/src-tauri",
  "examples/vite_tailwind/src-tauri",
  "examples/react_shadcn/src-tauri"
]

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
cxx = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tokio = { version = "1", features = ["time"] }
