[package]
name = "tauri_cpp_host"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "tauri_cpp_host"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
cxx.workspace = true
serde.workspace = true
serde_json.workspace = true
tauri.workspace = true
tokio.workspace = true

[build-dependencies]
cxx-build = "1"
