[package]
name = "tauri_cpp_plain_html"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "tauri_cpp_plain_html_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "tauri_cpp_plain_html"
path = "src/main.rs"

[build-dependencies]
tauri-build.workspace = true

[dependencies]
serde_json.workspace = true
tauri.workspace = true
tauri-plugin-dialog.workspace = true
tauri-plugin-shell.workspace = true
tauri_cpp_host = { path = "../../../rust/host" }
